--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -4,23 +4,13 @@ const bottomLinks = [
     header: 'Social',
     links: [
       {
-        name: 'Github',
-        href: 'https://github.com/',
-        isExternal: true,
-      },
-      {
-        name: 'Twitter',
-        href: 'https://twitter.com/',
-        isExternal: true,
-      },
-      {
         name: 'Instagram',
-        href: 'https://instagram.com/',
+        href: 'https://instagram.com/lacasita.ar',
         isExternal: true,
       },
       {
-        name: 'Facebook',
-        href: 'https://facebook.com/',
+        name: 'WhatsApp',
+        href: 'https://wa.link/7yv5jb',
         isExternal: true,
       },
     ],
@@ -39,33 +29,8 @@ const bottomLinks = [
         isExternal: false,
       },
       {
-        name: 'Pricing',
-        href: '/pricing',
-        isExternal: false,
-      },
-      {
-        name: 'Contact',
+        name: 'Contacto',
         href: '/contact',
-        isExternal: false,
-      },
-    ],
-  },
-  {
-    header: 'Legal',
-    links: [
-      {
-        name: 'Privacy',
-        href: '/privacy',
-        isExternal: false,
-      },
-      {
-        name: '404',
-        href: '/404',
-        isExternal: false,
-      },
-      {
-        name: 'Styleguide',
-        href: '/styleguide',
         isExternal: false,
       },
     ],
@@ -74,7 +39,7 @@ const bottomLinks = [
 ---
 
 <footer
-  class="bg-primary-500/10 dark:bg-primary-400/10 mt-16 py-16 lg:mt-20 lg:py-20"
+  class="mt-16 bg-primary-500/10 py-16 dark:bg-primary-400/10 lg:mt-20 lg:py-20"
   aria-labelledby="footer-heading"
 >
   <h2 id="footer-heading" class="sr-only">Footer</h2>
@@ -88,11 +53,11 @@ const bottomLinks = [
           :src="$store.theme.isDark ? '/assets/logo-inverted.svg' : '/assets/logo.svg'"
           alt="Stone"
         />
-        <p class="text-primary-950/70 dark:text-primary-200/70 text-base">
+        <p class="text-base text-primary-950/70 dark:text-primary-200/70">
           Stone is a premium Astro theme specially designed for Business, Marketing, SaaS and
           Startup websites.
         </p>
-        <p class="text-primary-950/70 dark:text-primary-200/70 text-sm">© 2023 Stone</p>
+        <p class="text-sm text-primary-950/70 dark:text-primary-200/70">© 2023 Stone</p>
       </div>
 
       <!-- Bottom links -->
@@ -106,7 +71,7 @@ const bottomLinks = [
                   <li>
                     <a
                       href={link.href}
-                      class="focus-visible:outline-primary-950 dark:focus-visible:outline-primary-200 inline-flex items-center gap-1 rounded-md text-base hover:underline focus-visible:outline focus-visible:outline-2"
+                      class="inline-flex items-center gap-1 rounded-md text-base hover:underline focus-visible:outline focus-visible:outline-2 focus-visible:outline-primary-950 dark:focus-visible:outline-primary-200"
                       target={link.isExternal ? '_blank' : undefined}
                       rel={link.isExternal ? 'noopener' : undefined}
                     >
