--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -7,21 +7,26 @@ const links = [
   },
   {
     ref: '02',
+    name: 'About',
+    href: '/about',
+  },
+  {
+    ref: '03',
     name: 'La Casita',
     href: '/la-casita',
   },
   {
-    ref: '03',
+    ref: '04',
     name: 'El Container',
     href: '/el-container',
   },
   {
-    ref: '04',
+    ref: '05',
     name: 'Reservas',
     href: '/reservas',
   },
   {
-    ref: '05',
+    ref: '06',
     name: 'Contacto',
     href: '/contact',
   },
