--- a/src/components/contact/ContactForm.astro
+++ b/src/components/contact/ContactForm.astro
@@ -7,7 +7,11 @@
           Estamos para ayudarte a planificar tu estadía. Escribinos y te respondemos a la brevedad.
         </p>
       </div>
-      <form action="#" method="POST" class="mt-3 flex flex-col gap-y-6">
+      <form
+        action="https://formspree.io/f/mgolkeva"
+        method="POST"
+        class="mt-3 flex flex-col gap-y-6"
+      >
         <!-- Full name input -->
         <div>
           <label for="full-name" class="sr-only">Full name</label>
