segui con las paginas

--- a/src/components/contact/ContactInfo.astro
+++ b/src/components/contact/ContactInfo.astro
@@ -59,10 +59,10 @@
             ></path>
           </svg>
           <a
-            href="mailto:lacasitapatagoniavla@gmail.com"
+            href="mailto:lacasitavlapatagonia@gmail.com"
             class="text-base font-medium hover:underline"
           >
-            lacasitapatagoniavla@gmail.com
+            lacasitavlapatagonia@gmail.com
           </a>
         </dd>
       </div>
