--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,12 +4,10 @@ import '@fontsource/inter/latin-500.css';
 import { ViewTransitions } from 'astro:transitions';
 import Footer from '../components/layout/Footer.astro';
 import Header from '../components/layout/Header.astro';
-
 interface Props {
   description: string;
   title: string;
 }
-
 const { description, title } = Astro.props;
 ---
 
@@ -26,6 +24,22 @@ const { description, title } = Astro.props;
     <meta name="description" content={description} />
     <title>{title}</title>
     <ViewTransitions />
+    <!-- Google Translate -->
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement(
+          {
+            pageLanguage: 'es',
+            includedLanguages: 'en,pt,fr,de',
+            layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+          },
+          'google_translate_element'
+        );
+      }
+    </script>
+    <script
+      type="text/javascript"
+      src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   </head>
   <body
     class="bg-primary-50 text-primary-950 antialiased transition dark:bg-primary-950 dark:text-primary-200"
@@ -43,9 +57,7 @@ const { description, title } = Astro.props;
     <script>
       import Alpine from 'alpinejs';
       import collapse from '@alpinejs/collapse';
-
       Alpine.plugin(collapse);
-
       Alpine.store('theme', {
         init() {
           this.isDark = (() => {
@@ -55,15 +67,12 @@ const { description, title } = Astro.props;
             return false;
           })();
         },
-
         isDark: false,
-
         toggle() {
           this.isDark = !this.isDark;
           localStorage.setItem('theme', this.isDark ? 'dark' : 'light');
         },
       });
-
       window.Alpine = Alpine;
       Alpine.start();
     </script>
