--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -68,10 +68,10 @@ const bottomLinks = [
       <!-- Brand -->
       <div class="flex max-w-sm flex-col items-start gap-6 sm:gap-8">
         <img
-          class="h-8 w-auto"
+          class="h-14 w-auto"
           width="65"
           height="40"
-          :src="$store.theme.isDark ? '/assets/logo-inverted.svg' : '/assets/logo.svg'"
+          :src="$store.theme.isDark ? '/logo.svg' : '/logo.svg'"
           alt="La Casita Patagonia"
         />
         <p class="text-base text-primary-950/70 dark:text-primary-200/70">
