--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,17 +1,3 @@
 ---
-import Heading from '../components/about/Heading.astro';
-import Mission from '../components/about/Mission.astro';
-import Team from '../components/about/Team.astro';
-import Values from '../components/about/Values.astro';
-import Layout from '../layouts/Layout.astro';
+return Astro.redirect('/404');
 ---
-
-<Layout
-  description="Find more our history, values, mission and more. We are a group of people who share the same values."
-  title="About · Stone"
->
-  <Heading />
-  <Mission />
-  <Values />
-  <Team />
-</Layout>
