--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -107,7 +107,7 @@ const links = [
       <div class="hidden overflow-hidden rounded-3xl lg:block">
         <img
           src="https://plus.unsplash.com/premium_photo-1669933015586-b95650b47701?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="La Casita Patagonia"
+          alt="pine"
           class="h-full w-full object-cover"
         />
       </div>
