modifique pagina reservas y agregue galeria

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -7,8 +7,8 @@ const links = [
   },
   {
     ref: '02',
-    name: 'About',
-    href: '/about',
+    name: 'Galería',
+    href: '/gallery',
   },
   {
     ref: '03',
